# bems

./: .gitmodules  CMakeLists.txt  README.md  RELEASE.md
src/: CMakeLists.txt  bem.f90  bem.mod  celap.f90  linalg.f90  main.f90
tests/: CMakeLists.txt  a.out  bem.h  main.cpp
tests/celap/: celap_example1.out
